==> ryoon/toppers-jsp/config/armv7m/nucleo_f446re/hw_serial.c <==
#include <t_services.h>
#include <sys_config.h>
#include <hw_serial.h>
#include <t_syslog.h>
#define sil_orw_mem(a, b)		sil_wrw_mem((a), sil_rew_mem(a) | (b))
#define sil_andw_mem(a, b)		sil_wrw_mem((a), sil_rew_mem(a) & ~(b))
#define sil_modw_mem(a, b, c)	sil_wrw_mem((a), (sil_rew_mem(a) & (~b)) | (c))
#define sil_orh_mem(a, b)		sil_wrh_mem((a), sil_reh_mem(a) | (b))
#define sil_andh_mem(a, b)		sil_wrh_mem((a), sil_reh_mem(a) & ~(b))
#define sil_modh_mem(a, b, c)	sil_wrh_mem((a), (sil_reh_mem(a) & (~b)) | (c))
#define INDEX_SIOP(siopid)	((UINT)((siopid) - 1))
#define get_siopcb(siopid)	(&(siopcb_table[INDEX_SIOP(siopid)]))
#define DEFAULT_PORT    1
#define TADR_USART1_BASE    0x40011000
#define TADR_USART6_BASE    0x40011400
#define TOFF_USART_SR       0x0000		/* (RW-16) USART Status register */
  #define USART_SR_PE        0x0001		/* Parity Error */
  #define USART_SR_FE        0x0002		/* Framing Error */
  #define USART_SR_NE        0x0004		/* Noise Error Flag */
  #define USART_SR_ORE       0x0008		/* OverRun Error */
  #define USART_SR_RXNE      0x0020		/* Read Data Register Not Empty */
  #define USART_SR_TC        0x0040		/* Transmission Complete */
#define TOFF_USART_DR       0x0004		/* (RW-16) USART Data register */
#define TOFF_USART_BRR      0x0008		/* (RW-16) USART Baud rate register */
#define TOFF_USART_CR1      0x000C		/* (RW-16) USART Control register 1 */
  #define USART_CR1_RE       0x0004		/* Receiver Enable */

SIOPCB *
sio_opn_por(ID siopid, VP_INT exinf)
{
	SIOPCB	*siopcb;
	const SIOPINIB  *siopinib;
	BOOL	opnflg;
	ER	ercd;
	UW	base, txbase, rxbase, txpin, rxpin;
	UW	apbclock, integerdivider, fractionaldivider, tmp;

	siopcb = get_siopcb(siopid);
	siopinib = siopcb->siopinib;

	/*
	 *  オープンしたポートがあるかをopnflgに読んでおく．
	 */
	opnflg = siopcb->opnflg;

	siopcb->exinf = exinf;
	txbase = siopinib->txportbase;
	rxbase = siopinib->rxportbase;
	txpin  = siopinib->txpin;
	rxpin  = siopinib->rxpin;
	base = siopinib->base;

	if(txbase == 0 || rxbase == 0)	/* no usart port */
		goto sio_opn_exit;

	/*
	 *  ハードウェアの初期化
	 */
	sil_orw_mem((VP)(siopinib->clockbase), siopinib->clock_set);
	sil_orw_mem((VP)(siopinib->portbase), siopinib->port_set);
	sil_modw_mem((VP)(txbase+TOFF_GPIO_MODER), (GPIO_MODER_MODER2 << (txpin*2)), (GPIO_Mode_AF << (txpin*2)));
	sil_modw_mem((VP)(txbase+TOFF_GPIO_OSPEEDR), (GPIO_OSPEEDER_OSPEEDR2 << (txpin*2)), (U_GPIOSPEED << (txpin*2)));
	sil_modw_mem((VP)(txbase+TOFF_GPIO_OTYPER), (GPIO_OTYPER_OT << txpin),  (GPIO_OType_PP << txpin));
	sil_modw_mem((VP)(txbase+TOFF_GPIO_PUPDR), (GPIO_PUPDR_PUPDR2 << (txpin*2)), (GPIO_PuPd_UP << (txpin*2)));
	sil_modw_mem((VP)(rxbase+TOFF_GPIO_MODER), (GPIO_MODER_MODER2 << (rxpin*2)), (GPIO_Mode_AF << (rxpin*2)));
	sil_modw_mem((VP)(txbase+TOFF_GPIO_OSPEEDR), (GPIO_OSPEEDER_OSPEEDR2 << (rxpin*2)), (U_GPIOSPEED << (rxpin*2)));
	sil_modw_mem((VP)(txbase+TOFF_GPIO_OTYPER), (GPIO_OTYPER_OT << rxpin),  (GPIO_OType_PP << rxpin));
	sil_modw_mem((VP)(txbase+TOFF_GPIO_PUPDR), (GPIO_PUPDR_PUPDR2 << (rxpin*2)), (GPIO_PuPd_UP << (rxpin*2)));
	setup_gpio_source(txbase, txpin, siopinib->gpio_af);
	setup_gpio_source(rxbase, rxpin, siopinib->gpio_af);

	sil_andh_mem((VP)(base+TOFF_USART_CR1), USART_CR1_UE);
	sil_modh_mem((VP)(base+TOFF_USART_CR2), USART_CR2_STOP, USART_StopBits_1);
	sil_modh_mem((VP)(base+TOFF_USART_CR1), CR1_CLEAR_MASK, (USART_WordLength_8b | USART_Parity_No | USART_Mode_Rx | USART_Mode_Tx));
	sil_modh_mem((VP)(base+TOFF_USART_CR3), CR3_CLEAR_MASK, USART_HardwareFlowControl_None);

	if ((base == TADR_USART1_BASE) || (base == TADR_USART6_BASE))
		apbclock = SysFrePCLK2;
	else
		apbclock = SysFrePCLK1;

	if ((sil_reh_mem((VP)(base+TOFF_USART_CR1)) & USART_CR1_OVER8) != 0){
		integerdivider = ((25 * apbclock) / (2 * DEF_BAUDRATE));	/* 8 Samples */
		tmp = (integerdivider / 100) << 4;
		fractionaldivider = integerdivider - (100 * (tmp >> 4));
		tmp |= ((((fractionaldivider * 8) + 50) / 100)) & 0x07;
	}
	else{ /* if ((USARTx->CR1 & USART_CR1_OVER8) == 0) */
		integerdivider = ((25 * apbclock) / (4 * DEF_BAUDRATE));	/* 16 Samples */
		tmp = (integerdivider / 100) << 4;
		fractionaldivider = integerdivider - (100 * (tmp >> 4));
		tmp |= ((((fractionaldivider * 16) + 50) / 100)) & 0x0F;
	}
	sil_wrh_mem((VP)(base+TOFF_USART_BRR), tmp);
	sil_orh_mem((VP)(base+TOFF_USART_CR1), USART_CR1_RXNEIE);
	siopcb->opnflg = TRUE;

	/*
	 *  シリアルI/O割込みのマスクを解除する．
	 */
	if (!opnflg) {
		x_config_int(siopinib->intno_usart, TRUE, siopinib->intpri);
	}
	sil_orh_mem((VP)(base+TOFF_USART_CR1), USART_CR1_UE);

sio_opn_exit:;
	return(siopcb);
}

Inline BOOL
sio_putready(SIOPCB* siopcb)
{
	UH cr1 = sil_reh_mem((VP)(siopcb->siopinib->base+TOFF_USART_CR1));
	UH ssr = sil_reh_mem((VP)(siopcb->siopinib->base+TOFF_USART_SR));

	if ((cr1 & USART_CR1_TXEIE) != 0 && (ssr & USART_SR_TC) != 0)
	{
		return TRUE;
	}
	return FALSE;
}

INT
sio_rcv_chr(SIOPCB *siopcb)
{
	INT c = -1;

	if (sio_getready(siopcb)) {
		c = sil_reh_mem((VP)(siopcb->siopinib->base+TOFF_USART_DR)) & 0xFF;
	}
	return c;
}

void
sio_ena_cbr(SIOPCB *siopcb, UINT cbrtn)
{
	switch (cbrtn) {
	case SIO_ERDY_SND:
		sil_orh_mem((VP)(siopcb->siopinib->base+TOFF_USART_CR1), USART_CR1_TXEIE);
		break;
	case SIO_ERDY_RCV:
		sil_orh_mem((VP)(siopcb->siopinib->base+TOFF_USART_CR1), USART_CR1_RXNEIE);
		break;
	}
}

void
sio_dis_cbr(SIOPCB *siopcb, UINT cbrtn)
{
	switch (cbrtn) {
	case SIO_ERDY_SND:
		sil_andh_mem((VP)(siopcb->siopinib->base+TOFF_USART_CR1), USART_CR1_TXEIE);
		break;
	case SIO_ERDY_RCV:
		sil_andh_mem((VP)(siopcb->siopinib->base+TOFF_USART_CR1), USART_CR1_RXNEIE);
		break;
	}
}

void
sio_snd_chr_pol(char c)
{
	const SIOPINIB  *siopinib = &siopinib_table[INDEX_SIOP(DEFAULT_PORT)];
	UW base = siopinib->base;

	sil_wrh_mem((VP)(base+TOFF_USART_DR), (UH)c);
	while(0 == (sil_reh_mem((VP)(base+TOFF_USART_SR)) & USART_SR_TC));

	/*
	 *  出力が完全に終わるまで待つ
	 */
	volatile int n = 300000000/DEF_BAUDRATE;
	while(n--);
}

void
sio_init(void)
{
	const SIOPINIB  *siopinib = &siopinib_table[INDEX_SIOP(DEFAULT_PORT)];
	UW	base, txbase, rxbase, txpin, rxpin;
	UW	apbclock, integerdivider, fractionaldivider, tmp;

	txbase = siopinib->txportbase;
	rxbase = siopinib->rxportbase;
	txpin  = siopinib->txpin;
	rxpin  = siopinib->rxpin;
	base = siopinib->base;

	sil_orw_mem((VP)(siopinib->clockbase), siopinib->clock_set);
	sil_orw_mem((VP)(siopinib->portbase), siopinib->port_set);
	sil_modw_mem((VP)(txbase+TOFF_GPIO_MODER), (GPIO_MODER_MODER2 << (txpin*2)), (GPIO_Mode_AF << (txpin*2)));
	sil_modw_mem((VP)(txbase+TOFF_GPIO_OSPEEDR), (GPIO_OSPEEDER_OSPEEDR2 << (txpin*2)), (U_GPIOSPEED << (txpin*2)));
	sil_modw_mem((VP)(txbase+TOFF_GPIO_OTYPER), (GPIO_OTYPER_OT << txpin),  (GPIO_OType_PP << txpin));
	sil_modw_mem((VP)(txbase+TOFF_GPIO_PUPDR), (GPIO_PUPDR_PUPDR2 << (txpin*2)), (GPIO_PuPd_UP << (txpin*2)));
	sil_modw_mem((VP)(rxbase+TOFF_GPIO_MODER), (GPIO_MODER_MODER2 << (rxpin*2)), (GPIO_Mode_AF << (rxpin*2)));
	sil_modw_mem((VP)(txbase+TOFF_GPIO_OSPEEDR), (GPIO_OSPEEDER_OSPEEDR2 << (rxpin*2)), (U_GPIOSPEED << (rxpin*2)));
	sil_modw_mem((VP)(txbase+TOFF_GPIO_OTYPER), (GPIO_OTYPER_OT << rxpin),  (GPIO_OType_PP << rxpin));
	sil_modw_mem((VP)(txbase+TOFF_GPIO_PUPDR), (GPIO_PUPDR_PUPDR2 << (rxpin*2)), (GPIO_PuPd_UP << (rxpin*2)));
	setup_gpio_source(txbase, txpin, siopinib->gpio_af);
	setup_gpio_source(rxbase, rxpin, siopinib->gpio_af);

	sil_modh_mem((VP)(base+TOFF_USART_CR2), USART_CR2_STOP, USART_StopBits_1);
	sil_modh_mem((VP)(base+TOFF_USART_CR1), CR1_CLEAR_MASK, (USART_WordLength_8b | USART_Parity_No | USART_Mode_Rx | USART_Mode_Tx));
	sil_modh_mem((VP)(base+TOFF_USART_CR3), CR3_CLEAR_MASK, USART_HardwareFlowControl_None);

	if ((base == TADR_USART1_BASE) || (base == TADR_USART6_BASE))
		apbclock = SysFrePCLK2;
	else
		apbclock = SysFrePCLK1;

	if ((sil_reh_mem((VP)(base+TOFF_USART_CR1)) & USART_CR1_OVER8) != 0){
		integerdivider = ((25 * apbclock) / (2 * DEF_BAUDRATE));	/* 8 Samples */
		tmp = (integerdivider / 100) << 4;
		fractionaldivider = integerdivider - (100 * (tmp >> 4));
		tmp |= ((((fractionaldivider * 8) + 50) / 100)) & 0x07;
	}
	else{ /* if ((USARTx->CR1 & USART_CR1_OVER8) == 0) */
		integerdivider = ((25 * apbclock) / (4 * DEF_BAUDRATE));	/* 16 Samples */
		tmp = (integerdivider / 100) << 4;
		fractionaldivider = integerdivider - (100 * (tmp >> 4));
		tmp |= ((((fractionaldivider * 16) + 50) / 100)) & 0x0F;
	}
	sil_wrh_mem((VP)(base+TOFF_USART_BRR), tmp);
	sil_andh_mem((VP)(base+TOFF_USART_CR1), (USART_CR1_TXEIE | USART_CR1_RXNEIE));
	sil_orh_mem((VP)(base+TOFF_USART_CR1),  USART_CR1_UE);
}
